--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 
 /.idea
 
-.env
+
 # Project exclude paths
 /node_modules/
+
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+.env
